# heyo_nbdev

./: README.md  heyo_nbdev.html  heyo_nbdev.html.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
heyo_nbdev/: _modidx.py  core.py
nbs/: 00_heyo_nbdev.ipynb  index.ipynb  nbdev.yml  sidebar.yml
