[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "heyo_nbdev"
dynamic = ["version"]
description = "heyo_nbdev"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "alex oxbits clifton", email = "oxbits@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/oxbits/heyo_nbdev"
Documentation = "https://oxbits.github.io/heyo_nbdev/"

[project.entry-points.nbdev]
heyo_nbdev = "heyo_nbdev._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "heyo_nbdev.__version__"}

[tool.setuptools.packages.find]
include = ["heyo_nbdev"]

[tool.nbdev]
